--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -3,7 +3,9 @@
 html,
 body,
 h1,
-p {
+h2,
+p,
+ul {
     margin: 0;
     padding: 0;
 }
@@ -66,6 +68,11 @@ p {
     margin-bottom: 24px;
 }
 
+.home-welcome-left-block>h1>span {
+    color: #386BEE;
+    text-decoration-line: underline;
+}
+
 .home-welcome-left-block>p {
     font-family: 'Noto Sans';
     font-style: normal;
@@ -82,4 +89,107 @@ p {
     height: 406px;
     top: -40px;
     right: -27px;
+}
+
+.home-categories-container {
+    margin: 0 80px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.home-categories-left-block {
+    max-width: 60%;
+}
+
+.home-categories-left-block>p {
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: #2D4379;
+    margin-bottom: 24px;
+}
+
+.home-categories-left-block>ul {
+    list-style-type: none;
+    display: flex;
+    margin-top: 12px;
+    flex-wrap: wrap;
+    row-gap: 12px;
+    column-gap: 16px;
+}
+
+.home-categories-search-field {
+    width: 350px;
+    height: 64px;
+    border: 1px solid rgba(45, 67, 121, 0.4);
+    border-radius: 32px;
+    padding: 0 32px;
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: calc(100% - 24px) 24px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.home-categories-search-field>input {
+    border: 1px solid red;
+    padding: 0;
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    color: #B3BBC2;
+}
+
+.home-categories-search-field>i {
+    font-size: 24px;
+    color: #386BEE;
+}
+
+.home-services-container {
+    padding: 0 80px;
+    overflow: hidden;
+}
+
+.home-services-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.home-services-header>h2 {
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 42px;
+    line-height: 57px;
+    color: #16181B;
+}
+
+.home-services-header>a {
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 18px;
+    color: #386BEE;
+    text-decoration: none;
+}
+
+.home-services-header>a:hover {
+    text-decoration-line: underline;
+}
+
+.home-services-header span {
+    margin-right: 12px;
+}
+
+.home-services-cards {
+    display: inline-flex;
+    flex-wrap: nowrap;
+    gap: 16px;
+    /* -webkit-mask-image: linear-gradient(to right, black, transparent); */
 }
