--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -35,6 +35,34 @@
     color: #386BEE;
 }
 
+.home-header>button {
+    padding: 0 24px;
+    height: 48px;
+    border: 1px solid #386BEE;
+    border-radius: 55px;
+    background: none;
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 16px;
+    color: #386BEE;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 14px;
+}
+
+.home-header>button>i {
+    font-size: 20px;
+}
+
+.home-header>button:hover {
+    background-color: #386BEE;
+    color: #FFFFFF;
+}
+
 .home-welcome-container {
     margin: 87px 80px 0 80px;
     display: grid;
@@ -70,6 +98,13 @@
     line-height: 28px;
     color: #2D4379;
     margin-bottom: 52px;
+    max-width: 550px;
+}
+
+.home-welcome-left-block>div {
+    display: flex;
+    align-items: center;
+    gap: 24px;
 }
 
 .home-welcome-right-block>img {
@@ -193,24 +228,105 @@
 }
 
 .home-giftbox-container {
-    padding: 0 80px;
+    margin: 83px 80px 64px;
     display: flex;
+    background: linear-gradient(99.72deg, #6AB8FF 17.77%, #4586F5 79.02%);
+    border-radius: 35px;
+    position: relative;
+}
+
+.home-giftbox-text-block {
+    padding: 40px;
+}
+
+.home-giftbox-text-block>p {
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 40px;
+    color: #FFFFFF;
+    margin-bottom: 36px;
 }
 
 .home-giftbox-image>img {
-    width: 183px;
-    height: 211px;
+    width: 159px;
+    height: 183px;
     filter: drop-shadow(8px 20px 32px rgba(61, 104, 184, 0.4));
+    position: absolute;
+    top: 50px;
+    left: 690px;
 }
 
 .home-taskboard-image>img {
-    width: 301.01px;
-    height: 386.92px;
+    width: 255.48px;
+    height: 328.39px;
     filter: drop-shadow(8px 20px 32px rgba(61, 104, 184, 0.4));
     transform: rotate(4.84deg);
+    position: absolute;
+    top: -33px;
+    left: 905px;
+}
+
+.home-feedback-container {
+    background: linear-gradient(99.72deg, #6AB8FF 17.77%, #4586F5 79.02%);
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
 }
 
 .home-feedback-header img {
     width: 730px;
     height: 344px;
+}
+
+.filled-blue-bg {
+    padding: 0 24px;
+    height: 48px;
+    background-color: #386BEE;
+    border: none;
+    border-radius: 75px;
+    box-shadow: 0px 8px 16px rgba(56, 107, 238, 0.25);
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+}
+
+.transparent-bg {
+    height: 48px;
+    background-color: rgba(56, 107, 238, 0.05);
+    border: none;
+    border-radius: 75px;
+    position: relative;
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    color: #386BEE;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.transparent-bg .plus-button {
+    width: 48px;
+    height: 48px;
+    line-height: 48px;
+    background-color: #386BEE;
+    box-shadow: 0px 8px 16px rgba(56, 107, 238, 0.25);
+    border-radius: 75px;
+    color: #FFFFFF;
+    font-size: 18px;
+}
+
+.transparent-bg span {
+    margin: 0 24px 0 14px;
 }
