--- a/src/static/css/global.css
+++ b/src/static/css/global.css
@@ -11,3 +11,14 @@ ul {
     margin: 0;
     padding: 0;
 }
+
+.backdrop {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 99;
+    background-color: rgba(0, 0, 0, 0.75);
+    backdrop-filter: blur(8px);
+}
