--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -3,7 +3,7 @@
     width: 1440px;
     box-sizing: border-box;
     margin: 0 auto;
-    padding-top: 33px;
+    padding-top: 32px;
 }
 
 .home-header {
@@ -64,7 +64,7 @@
 }
 
 .home-welcome-container {
-    margin: 87px 80px 0 80px;
+    margin: 110px 80px 16px;
     display: grid;
     grid-template-columns: repeat(2, 50%);
     height: 406px;
@@ -117,15 +117,9 @@
 
 .home-categories-container {
     margin: 0 80px;
-    display: flex;
-    justify-content: space-between;
 }
 
-.home-categories-left-block {
-    max-width: 60%;
-}
-
-.home-categories-left-block>p {
+.home-categories-container>p {
     font-family: 'Noto Sans';
     font-style: normal;
     font-weight: 400;
@@ -135,10 +129,19 @@
     margin-bottom: 24px;
 }
 
+.home-categories-container>div {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 64px;
+}
+
+.home-categories-left-block {
+    max-width: 60%;
+}
+
 .home-categories-left-block>ul {
     list-style-type: none;
     display: flex;
-    margin-top: 12px;
     flex-wrap: wrap;
     row-gap: 12px;
     column-gap: 16px;
@@ -146,30 +149,30 @@
 
 .home-categories-search-field {
     width: 350px;
-    height: 64px;
+    height: 54px;
     border: 1px solid rgba(45, 67, 121, 0.4);
     border-radius: 32px;
-    padding: 0 32px;
+    padding: 0 24px;
     box-sizing: border-box;
     display: grid;
-    grid-template-columns: calc(100% - 24px) 24px;
+    grid-template-columns: calc(100% - 24px - 12px) 24px;
     align-items: center;
     justify-content: space-between;
 }
 
 .home-categories-search-field>input {
-    border: 1px solid red;
+    border: none;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: 20px;
-    line-height: 24px;
+    font-size: 16px;
+    line-height: 16px;
     color: #B3BBC2;
 }
 
 .home-categories-search-field>i {
-    font-size: 24px;
+    font-size: 20px;
     color: #386BEE;
 }
 
