--- a/src/static/css/global.css
+++ b/src/static/css/global.css
@@ -12,6 +12,12 @@ ul {
     padding: 0;
 }
 
+hr {
+    border: 0;
+    border-top: 1px solid #E9EEFA;
+    margin: 0;
+}
+
 .backdrop {
     width: 100%;
     height: 100%;
