--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -79,8 +79,8 @@
     font-family: 'Noto Sans';
     font-style: normal;
     font-weight: 600;
-    font-size: 42px;
-    line-height: 54px;
+    font-size: 40px;
+    line-height: 48px;
     color: #000000;
     margin-bottom: 24px;
 }
@@ -94,8 +94,8 @@
     font-family: 'Noto Sans';
     font-style: normal;
     font-weight: 400;
-    font-size: 20px;
-    line-height: 28px;
+    font-size: 18px;
+    line-height: 24px;
     color: #2D4379;
     margin-bottom: 52px;
     max-width: 550px;
@@ -179,7 +179,8 @@
 .home-section-common-container {
     margin: 64px 0;
     padding: 0 80px;
-    overflow: hidden;
+    overflow: visible;
+    display: block;
 }
 
 /* .home-section-common-container.extended {
@@ -194,14 +195,15 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 32px;
 }
 
 .home-section-header>h2 {
     font-family: 'Noto Sans';
     font-style: normal;
     font-weight: 600;
-    font-size: 42px;
-    line-height: 57px;
+    font-size: 36px;
+    line-height: 36px;
     color: #16181B;
 }
 
@@ -224,10 +226,11 @@
 }
 
 .home-services-cards {
-    display: inline-flex;
+    display: flex;
     flex-wrap: nowrap;
     gap: 16px;
     /* -webkit-mask-image: linear-gradient(to right, black, transparent); */
+    overflow-x: auto;
 }
 
 .home-services-cards.extended {
@@ -277,11 +280,49 @@
 }
 
 .home-feedback-container {
+    margin-top: 90px;
     background: linear-gradient(99.72deg, #6AB8FF 17.77%, #4586F5 79.02%);
     border-top-left-radius: 50px;
     border-top-right-radius: 50px;
     padding: 40px 80px;
     position: relative;
+}
+
+.home-feedback-header {
+    margin-bottom: 32px;
+}
+
+.home-feedback-header>div {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+    font-family: 'Noto Sans';
+    font-style: normal;
+    color: #FFFFFF;
+}
+
+.home-feedback-header h2 {
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 36px;
+    text-shadow: 0px 1px 1px #3174BC;
+}
+
+.home-feedback-header a {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 18px;
+    color: #FFFFFF;
+    text-decoration: none;
+    margin-top: 6px;
+}
+
+.home-feedback-header a:hover {
+    text-decoration-line: underline;
+}
+
+.home-feedback-header span {
+    margin-right: 12px;
 }
 
 .home-feedback-header img {
@@ -349,4 +390,89 @@
 
 .transparent-bg span {
     margin: 0 24px 0 14px;
+}
+
+.home-subscription-wrapper {
+    margin: 64px 80px 120px;
+    padding-top: 20px;
+    overflow: hidden;
+}
+
+.home-subscription-container {
+    padding: 40px;
+    display: grid;
+    grid-template-columns: 560px auto;
+    align-items: center;
+    background: linear-gradient(99.72deg, #AAD1FC 17.77%, #76ACE8 79.02%);
+    border-radius: 35px;
+    position: relative;
+}
+
+.home-subscription-container h2 {
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 40px;
+    color: #FFFFFF;
+    margin-bottom: 32px;
+}
+
+.home-subscription-container p {
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #2D4379;
+    margin-bottom: 16px;
+}
+
+.home-subscription-container img {
+    width: 512px;
+    height: 381px;
+    position: absolute;
+    top: -15px;
+    right: 128px;
+}
+
+.home-subscription-buttons {
+    display: flex;
+    gap: 16px;
+}
+
+.home-subscription-buttons>button {
+    padding: 0 24px;
+    height: 48px;
+    border: none;
+    border-radius: 75px;
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.home-subscription-buttons>#vk {
+    background-color: #386BEE;
+    box-shadow: 0px 8px 16px rgba(56, 107, 238, 0.25);
+}
+
+.home-subscription-buttons>#vk>i {
+    font-size: 24px;
+}
+
+.home-subscription-buttons>#email {
+    background-color: #6BB9FF;
+    box-shadow: 0px 8px 16px rgba(64, 135, 198, 0.25);
+}
+
+.home-subscription-buttons>#email>i {
+    font-size: 22px;
 }
