home landing, service page

--- a/src/static/css/Footer.module.css
+++ b/src/static/css/Footer.module.css
@@ -11,7 +11,7 @@ footer {
 }
 
 .wrapper {
-    padding: 40px 80px 64px;
+    padding: 40px 80px;
     margin: 0 auto;
     width: 1440px;
     box-sizing: border-box;
