--- a/src/static/css/services.css
+++ b/src/static/css/services.css
@@ -1,11 +1,15 @@
 .service-card-container {
-    width: 308px;
-    height: 350px;
+    width: 245px;
+    height: 310px;
     background-color: rgba(244, 247, 255, 0.5);
-    border-radius: 20px;
-    padding: 20px 20px 32px;
+    border-radius: 12px;
+    padding: 16px;
     box-sizing: border-box;
     flex-shrink: 0;
+}
+
+.service-card-container a {
+    text-decoration: none;
 }
 
 .service-card-header {
@@ -16,25 +20,29 @@
 }
 
 .service-card-logo {
-    width: 120px;
+    width: 100px;
     height: 100px;
     background-color: #FFFFFF;
-    border-radius: 20px;
+    border-radius: 16px;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: lightgray;
-    font-size: xxx-large;
+    /* color: lightgray; */
+    /* font-size: xxx-large; */
+}
+
+.service-card-logo>img {
+    width: 80px;
 }
 
 .service-card-name {
     font-family: 'Montserrat', sans-serif;
     font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 30px;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 22px;
     color: #16181B;
-    margin-bottom: 4px;
+    margin-bottom: 8px;
 }
 
 .service-card-name+span {
@@ -50,8 +58,8 @@
     font-family: 'Noto Sans';
     font-style: normal;
     font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 14px;
+    line-height: 20px;
     color: #2D4379;
     margin-top: 16px;
 }
@@ -64,20 +72,90 @@
     border-radius: 18px;
     color: #FFFFFF;
     display: flex;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
     gap: 6px;
 }
 
 .service-rating-tag>i {
-    font-size: 14px;
+    font-size: 10px;
 }
 
 .service-rating-tag>span {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     font-weight: 600;
-    font-size: 14px;
+    font-size: 12px;
     line-height: 12px;
     text-align: center;
     text-transform: uppercase;
+}
+
+/* SERVICE PAGE */
+
+.service-main-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 40px 80px;
+}
+
+.service-rate {
+    display: flex;
+}
+
+.service-desc {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+}
+
+.service-categories-container>ul {
+    padding: 40px 80px 0;
+    list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 12px;
+    column-gap: 16px;
+}
+
+.service-main-container h1 {
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 40px;
+    color: #000000;
+}
+
+.service-main-container h1+span {
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    color: #2D4379;
+}
+
+.service-rate~p {
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    color: #2D4379;
+}
+
+.service-desc>span {
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 18px;
+    color: #2D4379;
+}
+
+.service-full-desc {
+    display: grid;
+    gap: 24px;
 }
