--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -257,44 +257,74 @@
     gap: 32px;
 }
 
+.home-banners-wrapper>div {
+    height: 232px;
+    box-sizing: border-box;
+}
+
 .home-giftbox-container {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     background: linear-gradient(99.72deg, #6AB8FF 17.77%, #4586F5 79.02%);
-    border-radius: 35px;
+    border-radius: 24px;
     position: relative;
+    padding: 32px;
+    overflow: hidden;
 }
 
-.home-giftbox-text-block {
-    padding: 40px;
+.home-banner-text-block {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
 }
 
-.home-giftbox-text-block>p {
+.home-banner-text-block>p {
     font-family: 'Noto Sans';
     font-style: normal;
     font-weight: 600;
-    font-size: 36px;
-    line-height: 40px;
+    font-size: 26px;
+    line-height: 32px;
     color: #FFFFFF;
-    margin-bottom: 36px;
 }
 
 .home-giftbox-image>img {
-    width: 159px;
-    height: 183px;
+    width: 87px;
+    height: 100px;
     filter: drop-shadow(8px 20px 32px rgba(61, 104, 184, 0.4));
     position: absolute;
-    top: 50px;
-    left: 690px;
+    top: 72px;
+    left: 322px;
 }
 
 .home-taskboard-image>img {
-    width: 255.48px;
-    height: 328.39px;
+    width: 155.88px;
+    height: 200.37px;
     filter: drop-shadow(8px 20px 32px rgba(61, 104, 184, 0.4));
     transform: rotate(4.84deg);
     position: absolute;
-    top: -33px;
-    left: 905px;
+    top: 10px;
+    /* left: 418px; */
+    right: 34px;
+}
+
+.home-specialist-banner-container {
+    display: grid;
+    grid-template-columns: 32% auto;
+    background: linear-gradient(99.72deg, #A5A8F8 17.77%, #7F80EA 79.02%);
+    border-radius: 24px;
+    position: relative;
+    padding: 32px;
+    overflow: hidden;
+}
+
+.home-specialist-banner-container img {
+    width: 182px;
+    height: 260px;
+    position: absolute;
+    top: 17px;
+    right: 76px;
+    filter: drop-shadow(8px 72px 24px #0A3066);
 }
 
 .home-feedback-container {
@@ -302,40 +332,37 @@
     background: linear-gradient(99.72deg, #6AB8FF 17.77%, #4586F5 79.02%);
     border-top-left-radius: 50px;
     border-top-right-radius: 50px;
-    padding: 40px 80px;
+    padding: 32px 80px;
     position: relative;
 }
 
 .home-feedback-header {
-    margin-bottom: 32px;
-}
-
-.home-feedback-header>div {
     display: flex;
     align-items: center;
-    gap: 24px;
+    justify-content: space-between;
     font-family: 'Noto Sans';
     font-style: normal;
     color: #FFFFFF;
+    margin-bottom: 24px;
 }
 
-.home-feedback-header h2 {
+.home-feedback-header>h2 {
     font-weight: 600;
-    font-size: 36px;
-    line-height: 36px;
+    font-size: 32px;
+    line-height: 32px;
     text-shadow: 0px 1px 1px #3174BC;
 }
 
-.home-feedback-header a {
+.home-feedback-header>a {
     font-weight: 500;
-    font-size: 18px;
-    line-height: 18px;
+    font-size: 16px;
+    line-height: 16px;
     color: #FFFFFF;
     text-decoration: none;
     margin-top: 6px;
 }
 
-.home-feedback-header a:hover {
+.home-feedback-header>a:hover {
     text-decoration-line: underline;
 }
 
