--- a/src/static/css/services.css
+++ b/src/static/css/services.css
@@ -47,7 +47,7 @@
     margin-bottom: 8px;
 }
 
-.service-card-name+span {
+.service-card-category {
     font-family: 'Montserrat', sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -198,7 +198,7 @@
     margin-bottom: 16px;
 }
 
-.service-banner-container button {
+/* .service-banner-container button {
     border: none;
     background: none;
     font-family: 'Noto Sans';
@@ -212,7 +212,7 @@
     align-items: center;
     justify-content: center;
     gap: 12px;
-}
+} */
 
 .service-banner-container img {
     width: 140px;
