--- a/src/static/css/feedback.css
+++ b/src/static/css/feedback.css
@@ -3,7 +3,7 @@
     box-shadow: 0px 8px 12px rgba(42, 102, 163, 0.33);
     backdrop-filter: blur(8px);
     border-radius: 20px;
-    padding: 24px 32px 26px;
+    padding: 20px 30px;
 }
 
 .feedback-card-header {
@@ -12,8 +12,8 @@
 }
 
 .feedback-card-header>img {
-    width: 76px;
-    height: 76px;
+    width: 64px;
+    height: 64px;
 }
 
 .feedback-card-username {
@@ -24,8 +24,8 @@
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 600;
-    font-size: 24px;
-    line-height: 28px;
+    font-size: 22px;
+    line-height: 24px;
     color: #16181B;
 }
 
@@ -41,7 +41,7 @@
 .feedback-card-rating>span {
     font-family: 'Montserrat';
     font-style: normal;
-    font-weight: 500;
+    font-weight: 400;
     font-size: 12px;
     line-height: 12px;
     color: #2D4379;
@@ -49,10 +49,11 @@
 
 .feedback-card-rating>div {
     display: flex;
+    gap: 6px;
 }
 
 .feedback-card-rating i {
-    font-size: 14px;
+    font-size: 12px;
 }
 
 .feedback-card-container>hr {
@@ -63,8 +64,8 @@
     font-family: 'Noto Sans';
     font-style: normal;
     font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 14px;
+    line-height: 20px;
     color: #2D4379;
 }
 
@@ -74,8 +75,8 @@
 }
 
 .feedback-service-logo {
-    width: 46px;
-    height: 46px;
+    width: 40px;
+    height: 40px;
     background-color: #FFFFFF;
     border-radius: 50%;
     display: flex;
@@ -92,8 +93,8 @@
     font-family: 'Noto Sans';
     font-style: normal;
     font-weight: 400;
-    font-size: 20px;
-    line-height: 20px;
+    font-size: 16px;
+    line-height: 16px;
     color: #386BEE;
     margin-bottom: 6px;
 }
@@ -102,8 +103,8 @@
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
-    line-height: 18px;
+    font-size: 12px;
+    line-height: 12px;
     color: rgba(45, 67, 121, 0.6);
 }
 
