--- a/src/static/css/services.css
+++ b/src/static/css/services.css
@@ -98,6 +98,9 @@
 
 .service-page-wrapper {
     padding: 40px 80px;
+    width: 1440px;
+    box-sizing: border-box;
+    margin: 0 auto;
 }
 
 .service-page-categories {
@@ -118,8 +121,36 @@
     gap: 40px;
 }
 
-.service-info {
+.service-images {
     display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 12px;
+    grid-auto-rows: min-content;
+    font-family: 'Noto Sans', sans-serif;
+    font-style: normal;
+    color: #2D4379;
+}
+
+.service-image-wrapper {
+    padding: 1%;
+    background-color: #F4F7FF;
+    border-radius: 8px;
+}
+
+.service-image-wrapper:first-child {
+    grid-column-start: 1;
+    grid-column-end: 4;
+}
+
+.service-image-wrapper>img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 8px;
+}
+
+.service-info {
+    display: block;
     font-family: 'Noto Sans', sans-serif;
     font-style: normal;
 }
