--- a/src/static/css/services.css
+++ b/src/static/css/services.css
@@ -185,7 +185,7 @@
 }
 
 .service-details {
-    margin: 32px 0;
+    margin-top: 32px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 10px;
