--- a/src/static/css/global.css
+++ b/src/static/css/global.css
@@ -34,6 +34,16 @@ hr {
     backdrop-filter: blur(8px);
 }
 
+.backdrop-no-blur {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 99;
+    background-color: rgba(0, 0, 0, 0.75);
+}
+
 .bg-white {
     background: white !important;
 }
