--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -558,3 +558,40 @@
 .home-subscription-buttons>#email>i {
     font-size: 22px;
 }
+
+/* HOME SERVICE SELECTION */
+
+.home-service-selection-container {
+    position: fixed;
+    top: 10%;
+    left: 0;
+    width: 100%;
+    height: 90%;
+    background: white;
+    padding: 40px 80px;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    box-sizing: border-box;
+    z-index: 100;
+    font-family: 'Noto Sans';
+    font-style: normal;
+}
+
+.home-service-selection-container>hr {
+    margin: 40px 0;
+}
+
+.home-service-selection-header>h2 {
+    font-weight: 600;
+    font-size: 42px;
+    line-height: 57px;
+    color: #16181B;
+    margin-bottom: 12px;
+}
+
+.home-service-selection-header>p {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 28px;
+    color: #2D4379;
+}
