--- a/src/static/css/global.css
+++ b/src/static/css/global.css
@@ -59,3 +59,15 @@ hr {
 .color-blue {
     color: #386BEE !important;
 }
+
+.cursor-pointer {
+    cursor: pointer;
+}
+
+.categories-list {
+    list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 12px;
+    column-gap: 16px;
+}
