--- a/src/static/css/AddService.module.css
+++ b/src/static/css/AddService.module.css
@@ -10,6 +10,10 @@
     padding: 48px 32px 32px;
     text-align: center;
     z-index: 100;
+    height: 90%;
+    overflow: auto;
+    font-family: 'Montserrat';
+    font-style: normal;
 }
 
 .popup>img {
@@ -19,8 +23,6 @@
 }
 
 .popup>h3 {
-    font-family: 'Montserrat';
-    font-style: normal;
     font-weight: 700;
     font-size: 36px;
     line-height: 36px;
@@ -29,8 +31,6 @@
 }
 
 .popup>p {
-    font-family: 'Montserrat';
-    font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
@@ -64,6 +64,12 @@
 .popup>form>textarea {
     height: 86px;
     resize: none;
+}
+
+.privacy {
+    margin: 32px 0;
+    display: flex;
+    gap: 24px;
 }
 
 .closeBtn {
