auth, services list

--- a/src/static/css/Header.module.css
+++ b/src/static/css/Header.module.css
@@ -19,6 +19,7 @@ header {
     align-items: center;
     justify-content: space-between;
     margin-bottom: 48px;
+    color: #FFFFFF;
 }
 
 .navigation {
