--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -18,6 +18,7 @@
     align-items: center;
     justify-content: space-between;
     position: relative;
+    color: #386BEE;
 }
 
 .home-header-navigation {
