--- a/src/static/css/global.css
+++ b/src/static/css/global.css
@@ -111,3 +111,28 @@ hr {
     color: inherit;
     text-decoration: none;
 }
+
+.loader {
+    border: 5px solid #555;
+    -webkit-animation: spin 1s linear infinite;
+    animation: spin 1s linear infinite;
+    border-top: 5px solid #f3f3f3;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 100;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
