--- a/src/static/css/services.css
+++ b/src/static/css/services.css
@@ -372,7 +372,7 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 18px;
-    padding: 10px 48px 10px 16px;
+    padding: 10px 85px 10px 16px;
     border: 1px solid rgba(200, 222, 253, 0.4);
     border-radius: 32px;
     box-sizing: border-box;
@@ -380,11 +380,21 @@
     color: #FFFFFF;
 }
 
-.services-header-search-container>i {
+.services-header-search-container>div {
     float: right;
     font-size: 18px;
     margin-top: -32px;
     margin-right: 18px;
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 16px;
+}
+
+.services-header-search-settings {
+    font-size: 18px;
+    display: flex;
+    position: relative;
+    cursor: pointer;
 }
 
 .services-list-categories-container>p {
@@ -411,6 +421,14 @@
     font-size: 42px;
     line-height: 54px;
     color: #000000;
+}
+
+.services-list-pagination {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 12px;
+    margin-bottom: 32px;
 }
 
 .services-list-cards-container {
